# icm20689pico

./: CMakeLists.txt
example/: example.c
include/icm20689pico/: icm20689pico.h
src/: icm20689pico.c
test/: test.c
